<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">	Infinity Assessment and IT solution</string>
    <string name="app_store_uri" translatable="false">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="app_deep_link_host" translatable="false">infinityitsolutions.co.in</string>
    <string name="app_deep_link_path" translatable="false">/.*</string>
    <string name="fcm_default_notification_channel_id" translatable="false">general</string>
    <string name="fcm_default_notification_channel_title">General notifications</string>

    <string name="navigation_header_title">Infinity Assessment</string>

    <string name="global_network_offline">No Internet connection available</string>

    <string name="menu_main_share">Share</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="placeholder_empty">Not found</string>
    <string name="placeholder_offline">No Internet connection available</string>

    <string name="permission_read_external_storage">Permission to read files is required</string>
    <string name="permission_write_external_storage">Permission to write files is required</string>
    <string name="permission_access_location">Permission to access your location is required</string>
    <string name="permission_camera">Permission to access your camera is required</string>
    <string name="permission_unknown">Permission is required</string>

    <string name="location_settings_snackbar">Device location is disabled</string>
    <string name="location_settings_confirm">Settings</string>

    <string name="main_exit_snackbar">Are you sure you want to exit?</string>
    <string name="main_exit_confirm">Yes</string>
    <string name="main_rate_snackbar">Do you like this app? Rate it on Play Store. Thanks for your support.</string>
    <string name="main_rate_confirm">Rate</string>
    <string name="main_downloading">Downloading…</string>
    <string name="contact_us">Contact-us</string>
    <string name="clear_cache">Clear cache</string>

    <string name="app_version">App Version</string>
    <string name="todo">TODO</string>
    <string name="v_1_0">V - 20.21.5</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="setting">About</string>
    <string name="social_media">Social-media</string>
    <string name="instaagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="Youtube">Youtube</string>
    <!--    <string name="contact_us">Contact-us</string>-->
</resources>
