<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Socail_meida">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/homee"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/hometoolbar">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_below="@id/homee"
        android:layout_height="wrap_content">


    <RelativeLayout android:layout_gravity="center"
        android:background="@drawable/border_bottom_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/instagram"

            android:background="?selectableItemBackground"

            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:clickable="true" android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true">
            <ImageView android:padding="5.0dip"
                android:layout_width="40.0dip"
                android:layout_height="40.0dip"
                android:layout_marginEnd="10.0dip"
                app:srcCompat="@drawable/instagram"

                tools:ignore="VectorDrawableCompat"
                android:contentDescription="@string/todo" />
            <LinearLayout android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0.0dip">
                <TextView android:textSize="18.0sp"
                    android:textColor="@color/navigationBarDark"
                    android:gravity="center|left"
                    android:padding="2.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instaagram"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
        <RelativeLayout android:layout_gravity="center"
            android:background="@drawable/border_bottom_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/facebook"

                android:background="?selectableItemBackground"

                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:clickable="true" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true">
                <ImageView android:padding="5.0dip"
                    android:layout_width="40.0dip"
                    android:layout_height="40.0dip"
                    android:layout_marginEnd="10.0dip"
                    app:srcCompat="@drawable/facebook"

                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/todo" />
                <LinearLayout android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0.0dip">
                    <TextView android:textSize="18.0sp"
                        android:textColor="@color/navigationBarDark"
                        android:gravity="center|left"
                        android:padding="2.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>
        <RelativeLayout android:layout_gravity="center"
            android:background="@drawable/border_bottom_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/twitter"

                android:background="?selectableItemBackground"

                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:clickable="true" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true">
                <ImageView android:padding="5.0dip"
                    android:layout_width="40.0dip"
                    android:layout_height="40.0dip"
                    android:layout_marginEnd="10.0dip"
                    app:srcCompat="@drawable/twitter"

                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/todo" />
                <LinearLayout android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0.0dip">
                    <TextView android:textSize="18.0sp"
                        android:textColor="@color/navigationBarDark"
                        android:gravity="center|left"
                        android:padding="2.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>
<!--        <RelativeLayout android:layout_gravity="center"-->
<!--            android:background="@drawable/border_bottom_settings"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <LinearLayout-->
<!--                android:orientation="horizontal"-->
<!--                android:id="@+id/youtube"-->

<!--                android:background="?selectableItemBackground"-->

<!--                android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--                android:paddingTop="@dimen/activity_vertical_margin"-->
<!--                android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--                android:paddingBottom="@dimen/activity_vertical_margin"-->
<!--                android:clickable="true" android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:focusable="true">-->
<!--                <ImageView android:padding="5.0dip"-->
<!--                    android:layout_width="40.0dip"-->
<!--                    android:layout_height="40.0dip"-->
<!--                    android:layout_marginEnd="10.0dip"-->
<!--                    app:srcCompat="@drawable/youtube"-->

<!--                    tools:ignore="VectorDrawableCompat"-->
<!--                    android:contentDescription="@string/todo" />-->
<!--                <LinearLayout android:orientation="vertical"-->
<!--                    android:layout_width="fill_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="0.0dip">-->
<!--                    <TextView android:textSize="18.0sp"-->
<!--                        android:textColor="@color/navigationBarDark"-->
<!--                        android:gravity="center|left"-->
<!--                        android:padding="2.0dip"-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/Youtube"-->
<!--                        tools:ignore="RtlHardcoded" />-->

<!--                </LinearLayout>-->


<!--            </LinearLayout>-->


<!--        </RelativeLayout>-->
<!--        -->


    </LinearLayout>


</RelativeLayout>