<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Setting">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/homee"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hometoolbar">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
        android:layout_below="@id/homee"
        android:layout_height="wrap_content">

<!--        <RelativeLayout android:layout_gravity="center"-->
<!--            android:background="@drawable/border_bottom_settings"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <LinearLayout android:orientation="horizontal"-->
<!--                android:id="@+id/contactus"-->
<!--                android:background="?selectableItemBackground"-->

<!--                android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--                android:paddingTop="@dimen/activity_vertical_margin"-->
<!--                android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--                android:paddingBottom="@dimen/activity_vertical_margin"-->
<!--                android:clickable="true" android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content">-->
<!--                <ImageView android:padding="5.0dip"-->
<!--                    android:layout_width="40.0dip"-->
<!--                    android:layout_height="40.0dip"-->
<!--                    android:layout_marginRight="10.0dip"-->
<!--                    app:srcCompat="@drawable/email_icon"-->

<!--                    tools:ignore="VectorDrawableCompat" />-->
<!--                <LinearLayout android:orientation="vertical"-->
<!--                    android:layout_width="fill_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginRight="0.0dip">-->
<!--                    <TextView android:textSize="18.0dip"-->
<!--                        android:textColor="@color/navigationBarDark"-->
<!--                        android:gravity="center|left"-->
<!--                        android:padding="2.0dip"-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/contact_us" />-->

<!--                </LinearLayout>-->

<!--            </LinearLayout>-->


<!--        </RelativeLayout>-->
<!--        <RelativeLayout android:layout_gravity="center"-->
<!--            android:background="@drawable/border_bottom_settings"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <LinearLayout android:orientation="horizontal"-->
<!--                android:id="@+id/privacypolicy"-->

<!--                android:background="?selectableItemBackground"-->

<!--                android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--                android:paddingTop="@dimen/activity_vertical_margin"-->
<!--                android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--                android:paddingBottom="@dimen/activity_vertical_margin"-->
<!--                android:clickable="true" android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content">-->
<!--                <ImageView android:padding="5.0dip"-->
<!--                    android:layout_width="40.0dip"-->
<!--                    android:layout_height="40.0dip"-->
<!--                    android:layout_marginRight="10.0dip"-->
<!--                    app:srcCompat="@drawable/ic_sharp_lock_24"-->

<!--                    tools:ignore="VectorDrawableCompat" />-->
<!--                <LinearLayout android:orientation="vertical"-->
<!--                    android:layout_width="fill_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginRight="0.0dip">-->
<!--                    <TextView android:textSize="18.0dip"-->
<!--                        android:textColor="@color/navigationBarDark"-->
<!--                        android:gravity="center|left"-->
<!--                        android:padding="2.0dip"-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="Privacy Policy" />-->
<!--                    &lt;!&ndash;                    <TextView android:textSize="14.0dip"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:gravity="center|left"&ndash;&gt;-->

<!--                    &lt;!&ndash;                        android:padding="2.0dip"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:layout_width="fill_parent"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:text="/label_cache"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:layout_weight="1.0" />&ndash;&gt;-->
<!--                </LinearLayout>-->

<!--            </LinearLayout>-->


<!--        </RelativeLayout>-->
        <RelativeLayout android:layout_gravity="center"
            android:background="@drawable/border_bottom_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/clearcache"

                android:background="?selectableItemBackground"

                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:clickable="true" android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true">
                <ImageView android:padding="5.0dip"
                    android:layout_width="40.0dip"
                    android:layout_height="40.0dip"
                    android:layout_marginEnd="10.0dip"
                    app:srcCompat="@drawable/ic_sharp_delete_24"

                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="@string/todo" />
                <LinearLayout android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0.0dip">
                    <TextView android:textSize="18.0sp"
                        android:textColor="@color/navigationBarDark"
                        android:gravity="center|left"
                        android:padding="2.0dip"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_cache"
                        tools:ignore="RtlHardcoded" />
                    <!--                    <TextView android:textSize="14.0dip"-->
                    <!--                        android:gravity="center|left"-->

                    <!--                        android:padding="2.0dip"-->
                    <!--                        android:layout_width="fill_parent"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:text="/label_cache"-->
                    <!--                        android:layout_weight="1.0" />-->
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
<!--        <RelativeLayout android:layout_gravity="center"-->
<!--            android:background="@drawable/border_bottom_settings"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--            <LinearLayout android:orientation="horizontal"-->

<!--                android:background="?selectableItemBackground"-->

<!--                android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--                android:paddingTop="@dimen/activity_vertical_margin"-->
<!--                android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--                android:paddingBottom="@dimen/activity_vertical_margin"-->
<!--                android:clickable="true" android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content">-->
<!--                <ImageView android:padding="5.0dip"-->
<!--                    android:layout_width="40.0dip"-->
<!--                    android:layout_height="40.0dip"-->
<!--                    android:layout_marginRight="10.0dip"-->
<!--                    app:srcCompat="@drawable/ic_sharp_bug_report_24"-->

<!--                    tools:ignore="VectorDrawableCompat" />-->
<!--                <LinearLayout android:orientation="vertical"-->
<!--                    android:layout_width="fill_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginRight="0.0dip">-->

<!--                    <TextView-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:gravity="center|left"-->
<!--                        android:padding="2.0dip"-->
<!--                        android:text="Report bug"-->
<!--                        android:textColor="@color/navigationBarDark"-->
<!--                        android:textSize="18.0dip" />-->
<!--                    &lt;!&ndash;                    <TextView android:textSize="14.0dip"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:gravity="center|left"&ndash;&gt;-->

<!--                    &lt;!&ndash;                        android:padding="2.0dip"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:layout_width="fill_parent"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:text="/label_cache"&ndash;&gt;-->
<!--                    &lt;!&ndash;                        android:layout_weight="1.0" />&ndash;&gt;-->
<!--                </LinearLayout>-->

<!--            </LinearLayout>-->

<!--        </RelativeLayout>-->
        <RelativeLayout android:layout_gravity="center"
            android:background="@drawable/border_bottom_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true">
                <RelativeLayout android:layout_gravity="center"
                    android:background="@drawable/border_bottom_settings"
                    android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="60.0dip"
                        tools:ignore="UseCompoundDrawables">
                        <ImageView android:padding="5.0dip"
                            android:layout_width="40.0dip"
                            android:layout_height="40.0dip"
                            android:layout_marginEnd="10.0dip"
                            app:srcCompat="@drawable/ic_sharp_info_24"
                            android:contentDescription="@string/todo" />
                        <TextView android:textSize="18.0sp"
                            android:textColor="@color/navigationBarDark"
                            android:gravity="center|left"
                            android:padding="2.0dip"
                            android:layout_width="fill_parent"
                            android:layout_height="40.0dip"
                            android:text="@string/app_version"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>
                    <TextView android:textSize="14.0sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/navigationBarDark"
                        android:padding="2.0dip"
                        android:layout_width="60.0dip"
                        android:layout_height="70.0dip"
                        android:text="@string/v_1_0"
                        android:layout_alignParentEnd="true"
                        android:textAlignment="center" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>